--- a/db-course/011-Final.ipynb
+++ b/db-course/011-Final.ipynb
@@ -98,7 +98,8 @@
    },
    "source": [
     "8. List all job seekers with only 1 skill.\n",
-    "9. List the top 3 job postings with the most skills required.\n"
+    "9. List the top 3 job postings with the most skills required.\n",
+    "10. List all top 3 applicants with the most number of skills"
    ]
   }
  ],
