--- a/db-course/PythonFinalPro.ipynb
+++ b/db-course/PythonFinalPro.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2023-12-11 15:51:13,407][INFO]: Connecting root@fakeservices.datajoint.io:3306\n",
-      "[2023-12-11 15:51:13,492][INFO]: Connected root@fakeservices.datajoint.io:3306\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datajoint as dj\n",
     "from faker import Faker\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,9 +1912,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "import pymysql\n",
     "pymysql.install_as_MySQLdb()\n",
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1955,7 +1955,7 @@
        "[]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2042,7 +2042,7 @@
        " ('~log',)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2066,57 +2066,20 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@127.0.0.1\n",
-      "1 rows affected.\n"
+      "(pymysql.err.ProgrammingError) (1064, \"You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'dj.make' at line 3\")\n",
+      "[SQL: SELECT *, count(applicant_id) as number_of_applicants\n",
+      "FROM job natural join job__skill natural join application \n",
+      "where skill=\"SQL\" AND job_id NOT IN (SELECT job_id FROM acceptance) dj.make]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>job_id</th>\n",
-       "            <th>manager_id</th>\n",
-       "            <th>job_title</th>\n",
-       "            <th>open_date</th>\n",
-       "            <th>description</th>\n",
-       "            <th>minimum_annual_salary</th>\n",
-       "            <th>maximum_annual_salary</th>\n",
-       "            <th>skill</th>\n",
-       "            <th>applicant_id</th>\n",
-       "            <th>number_of_applicants</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>f3-2879298o</td>\n",
-       "            <td>613054</td>\n",
-       "            <td>Data Engineer</td>\n",
-       "            <td>2024-03-02</td>\n",
-       "            <td>ensure that the overall system run efficiently and securely</td>\n",
-       "            <td>61000</td>\n",
-       "            <td>96000</td>\n",
-       "            <td>SQL</td>\n",
-       "            <td>c7-8907313H</td>\n",
-       "            <td>8</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('f3-2879298o', 613054, 'Data Engineer', datetime.date(2024, 3, 2), 'ensure that the overall system run efficiently and securely', 61000, 96000, 'SQL', 'c7-8907313H', 8)]"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "SELECT *, count(applicant_id) as number_of_applicants\n",
     "FROM job natural join job__skill natural join application \n",
-    "where skill=\"SQL\" AND job_id NOT IN (SELECT job_id FROM acceptance) \n"
+    "where skill=\"SQL\" AND job_id NOT IN (SELECT job_id FROM acceptance)\n",
+    "\n"
    ]
   },
   {
@@ -2732,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2744,14 +2707,42 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@127.0.0.1\n",
-      "(pymysql.err.ProgrammingError) (1064, \"You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '_make.datajoint(SELECT job_id, COUNT(*) AS application_count\\nFROM application\\nGR' at line 1\")\n",
-      "[SQL: _make.datajoint(SELECT job_id, COUNT(*) AS application_count\n",
-      "FROM application\n",
-      "GROUP BY job_id\n",
-      "ORDER BY application_count DESC\n",
-      "LIMIT 3)]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+      "3 rows affected.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>job_id</th>\n",
+       "            <th>application_count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>f1-2207807e</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>M1-0138752M</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>J5-6425102P</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('f1-2207807e', 7), ('M1-0138752M', 6), ('J5-6425102P', 5)]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2760,7 +2751,8 @@
     "FROM application\n",
     "GROUP BY job_id\n",
     "ORDER BY application_count DESC\n",
-    "LIMIT 3"
+    "LIMIT 3\n",
+    "\n"
    ]
   },
   {
@@ -2877,7 +2869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2898,7 +2890,6 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>number_of_skills</th>\n",
        "            <th>job_id</th>\n",
        "            <th>manager_id</th>\n",
        "            <th>job_title</th>\n",
@@ -2906,13 +2897,11 @@
        "            <th>description</th>\n",
        "            <th>minimum_annual_salary</th>\n",
        "            <th>maximum_annual_salary</th>\n",
-       "            <th>job_id_1</th>\n",
-       "            <th>skill</th>\n",
+       "            <th>number_of_skills</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>7</td>\n",
        "            <td>b9-5331889F</td>\n",
        "            <td>373145</td>\n",
        "            <td>Database Admin</td>\n",
@@ -2920,11 +2909,9 @@
        "            <td>designing, building, and maintaining the infrastructure that supports data storage, processing, and retrieval.</td>\n",
        "            <td>75000</td>\n",
        "            <td>104000</td>\n",
-       "            <td>b9-5331889F</td>\n",
-       "            <td>C++ Language</td>\n",
+       "            <td>7</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>5</td>\n",
        "            <td>X7-9235874U</td>\n",
        "            <td>613054</td>\n",
        "            <td>Data Engineer</td>\n",
@@ -2932,11 +2919,9 @@
        "            <td>identifies trends, patterns, and anomalies found in big data sets by performing extensive data analysis to develop insights.</td>\n",
        "            <td>51000</td>\n",
        "            <td>123000</td>\n",
-       "            <td>X7-9235874U</td>\n",
-       "            <td>C++ Language</td>\n",
+       "            <td>5</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>5</td>\n",
        "            <td>d7-7843350J</td>\n",
        "            <td>503958</td>\n",
        "            <td>Data Analyst</td>\n",
@@ -2944,44 +2929,110 @@
        "            <td>designing, building, and maintaining the infrastructure that supports data storage, processing, and retrieval.</td>\n",
        "            <td>76000</td>\n",
        "            <td>143000</td>\n",
-       "            <td>d7-7843350J</td>\n",
-       "            <td>C++ Language</td>\n",
+       "            <td>5</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(7, 'b9-5331889F', 373145, 'Database Admin', datetime.date(2024, 2, 21), 'designing, building, and maintaining the infrastructure that supports data storage, processing, and retrieval.', 75000, 104000, 'b9-5331889F', 'C++ Language'),\n",
-       " (5, 'X7-9235874U', 613054, 'Data Engineer', datetime.date(2024, 1, 30), 'identifies trends, patterns, and anomalies found in big data sets by performing extensive data analysis to develop insights.', 51000, 123000, 'X7-9235874U', 'C++ Language'),\n",
-       " (5, 'd7-7843350J', 503958, 'Data Analyst', datetime.date(2024, 1, 2), 'designing, building, and maintaining the infrastructure that supports data storage, processing, and retrieval.', 76000, 143000, 'd7-7843350J', 'C++ Language')]"
+       "[('b9-5331889F', 373145, 'Database Admin', datetime.date(2024, 2, 21), 'designing, building, and maintaining the infrastructure that supports data storage, processing, and retrieval.', 75000, 104000, 7),\n",
+       " ('X7-9235874U', 613054, 'Data Engineer', datetime.date(2024, 1, 30), 'identifies trends, patterns, and anomalies found in big data sets by performing extensive data analysis to develop insights.', 51000, 123000, 5),\n",
+       " ('d7-7843350J', 503958, 'Data Analyst', datetime.date(2024, 1, 2), 'designing, building, and maintaining the infrastructure that supports data storage, processing, and retrieval.', 76000, 143000, 5)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT COUNT(*) as number_of_skills,  j.*, s.*\n",
-    "FROM job j JOIN job__skill s ON j.job_id = s.job_id\n",
-    "WHERE s.skill IN (SELECT skill FROM applicant__skill)\n",
-    "GROUP BY j.job_id\n",
+    "\n",
+    "SELECT job.*,COUNT(skill) as number_of_skills\n",
+    "FROM job NATURAL JOIN job__skill \n",
+    "GROUP BY job_id\n",
     "ORDER BY number_of_skills DESC\n",
-    "limit 3"
+    "limit 3 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>applicant_id</th>\n",
+       "            <th>first_name</th>\n",
+       "            <th>last_name</th>\n",
+       "            <th>phone</th>\n",
+       "            <th>email</th>\n",
+       "            <th>num_skills</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>M1-4181491l</td>\n",
+       "            <td>Haley</td>\n",
+       "            <td>Flynn</td>\n",
+       "            <td>33187570267</td>\n",
+       "            <td>preynolds@example.com</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>i7-4926114O</td>\n",
+       "            <td>Lisa</td>\n",
+       "            <td>Tran</td>\n",
+       "            <td>58652894361</td>\n",
+       "            <td>burnettnatalie@example.org</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>A5-8064064C</td>\n",
+       "            <td>Alan</td>\n",
+       "            <td>Hayden</td>\n",
+       "            <td>56820565210</td>\n",
+       "            <td>sharris@example.com</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('M1-4181491l', 'Haley', 'Flynn', 33187570267, 'preynolds@example.com', 7),\n",
+       " ('i7-4926114O', 'Lisa', 'Tran', 58652894361, 'burnettnatalie@example.org', 7),\n",
+       " ('A5-8064064C', 'Alan', 'Hayden', 56820565210, 'sharris@example.com', 7)]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT applicant.*, COUNT(skill) AS num_skills\n",
+    "FROM applicant  NATURAL JOIN applicant__skill \n",
+    "GROUP BY applicant_id\n",
+    "ORDER BY num_skills DESC\n",
+    "LIMIT 3\n",
+    "\n"
    ]
   }
  ],
