--- a/db-course/007-Aggregation-HW.ipynb
+++ b/db-course/007-Aggregation-HW.ipynb
@@ -764,116 +764,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "    \n",
-       "    <style type=\"text/css\">\n",
-       "        .Table{\n",
-       "            border-collapse:collapse;\n",
-       "        }\n",
-       "        .Table th{\n",
-       "            background: #A0A0A0; color: #ffffff; padding:4px; border:#f0e0e0 1px solid;\n",
-       "            font-weight: normal; font-family: monospace; font-size: 100%;\n",
-       "        }\n",
-       "        .Table td{\n",
-       "            padding:4px; border:#f0e0e0 1px solid; font-size:100%;\n",
-       "        }\n",
-       "        .Table tr:nth-child(odd){\n",
-       "            background: #ffffff;\n",
-       "            color: #000000;\n",
-       "        }\n",
-       "        .Table tr:nth-child(even){\n",
-       "            background: #f3f1ff;\n",
-       "            color: #000000;\n",
-       "        }\n",
-       "        /* Tooltip container */\n",
-       "        .djtooltip {\n",
-       "        }\n",
-       "        /* Tooltip text */\n",
-       "        .djtooltip .djtooltiptext {\n",
-       "            visibility: hidden;\n",
-       "            width: 120px;\n",
-       "            background-color: black;\n",
-       "            color: #fff;\n",
-       "            text-align: center;\n",
-       "            padding: 5px 0;\n",
-       "            border-radius: 6px;\n",
-       "            /* Position the tooltip text - see examples below! */\n",
-       "            position: absolute;\n",
-       "            z-index: 1;\n",
-       "        }\n",
-       "        #primary {\n",
-       "            font-weight: bold;\n",
-       "            color: black;\n",
-       "        }\n",
-       "        #nonprimary {\n",
-       "            font-weight: normal;\n",
-       "            color: white;\n",
-       "        }\n",
-       "\n",
-       "        /* Show the tooltip text when you mouse over the tooltip container */\n",
-       "        .djtooltip:hover .djtooltiptext {\n",
-       "            visibility: visible;\n",
-       "        }\n",
-       "    </style>\n",
-       "    \n",
-       "    \n",
-       "        <div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "        <table border=\"1\" class=\"Table\">\n",
-       "            <thead> <tr style=\"text-align: right;\"> <th> <div class=\"djtooltip\">\n",
-       "                            <p id=\"primary\">region_id</p>\n",
-       "                            <span class=\"djtooltiptext\"></span>\n",
-       "                        </div></th><th><div class=\"djtooltip\">\n",
-       "                            <p id=\"nonprimary\">name</p>\n",
-       "                            <span class=\"djtooltiptext\"></span>\n",
-       "                        </div></th><th><div class=\"djtooltip\">\n",
-       "                            <p id=\"nonprimary\">gdp_per_capita</p>\n",
-       "                            <span class=\"djtooltiptext\">calculated attribute</span>\n",
-       "                        </div> </th> </tr> </thead>\n",
-       "            <tbody> <tr> <td>4</td>\n",
-       "<td>Southern Europe</td>\n",
-       "<td>28894.7823</td></tr><tr><td>9</td>\n",
-       "<td>Australia and New Zealand</td>\n",
-       "<td>54797.2481</td></tr><tr><td>10</td>\n",
-       "<td>Western Europe</td>\n",
-       "<td>48084.2176</td></tr><tr><td>15</td>\n",
-       "<td>North America</td>\n",
-       "<td>60969.2672</td></tr><tr><td>19</td>\n",
-       "<td>Nordic Countries</td>\n",
-       "<td>60283.0448</td></tr><tr><td>24</td>\n",
-       "<td>British Islands</td>\n",
-       "<td>44961.9390</td> </tr> </tbody>\n",
-       "        </table>\n",
-       "        \n",
-       "        <p>Total: 6</p></div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "*region_id    name           gdp_per_capita\n",
-       "+-----------+ +------------+ +------------+\n",
-       "4             Southern Europ 28894.7823    \n",
-       "9             Australia and  54797.2481    \n",
-       "10            Western Europe 48084.2176    \n",
-       "15            North America  60969.2672    \n",
-       "19            Nordic Countri 60283.0448    \n",
-       "24            British Island 44961.9390    \n",
-       " (Total: 6)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Countries' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m stats2018 \u001b[39m=\u001b[39m Countries\u001b[39m.\u001b[39mproj(\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, country_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mname\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m*\u001b[39m CountryStats() \u001b[39m&\u001b[39m \u001b[39m'\u001b[39m\u001b[39myear=2018\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      3\u001b[0m Regions\u001b[39m.\u001b[39maggr(stats2018 , \u001b[39m'\u001b[39m\u001b[39mname\u001b[39m\u001b[39m'\u001b[39m, gdp_per_capita \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39msum(gdp) / sum(population)\u001b[39m\u001b[39m'\u001b[39m) \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Countries' is not defined"
+     ]
     }
    ],
    "source": [
     "stats2018 = Countries.proj(..., country_name=\"name\") * CountryStats() & 'year=2018'\n",
     "\n",
-    "Regions.aggr(stats2018 , 'name', gdp_per_capita = 'sum(gdp) / sum(population)') "
+    "Regions.aggr(stats2018 , 'name', gdp_per_capita = 'sum(gdp) / sum(population)') \n"
    ]
   },
   {
